src/test/resources/fail/InterfaceDeclaration_02.groovy
interface ITest {
    def foo(a, b) {
        return a + b
    }
}
